navbar scrollable content not visible fix

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,3 +4,7 @@
 .navBtn{
     background-color: #28519E;
 }
+.navbar{
+    background-color: #FFFFFF;
+    box-shadow: 4px 0px 4px rgba(0, 0, 0, 0.15);
+}
